fix minor formatting, vendor prefixes, & slimscroll word wrap bug Tabs to 4 spaces Some -vendor- transitions, box-shadow, border-radius haven't been in use for years. Using a space inside `navigationTooltips` causes wrapping unless you use `white-space: nowrap;` examples/navigationV.html demos fix bump v2.1.8

--- a/jquery.fullPage.css
+++ b/jquery.fullPage.css
@@ -1,5 +1,5 @@
 /**
- * fullPage 2.1.7
+ * fullPage 2.1.8
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
@@ -8,25 +8,25 @@
 html, body {
     margin: 0;
     padding: 0;
-	overflow:hidden;
+    overflow:hidden;
 
     /*Avoid flicker on slides transitions for mobile phones #336 */
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 #superContainer {
     height: 100%;
     position: relative;
 
-	/* Touch detection for Windows 8 */
+    /* Touch detection for Windows 8 */
     -ms-touch-action: none;
 
     /* IE 11 on Windows Phone 8.1*/
-	touch-action: none;
+    touch-action: none;
 }
 .fp-section {
     position: relative;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box; /* Safari<=5 Android<=3 */ 
+    -moz-box-sizing: border-box; /* <=28 */
     box-sizing: border-box;
 }
 .fp-slide {
@@ -40,9 +40,7 @@ html, body {
     height: 100%;
     overflow: hidden;
     position: relative;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out; /* Safari<=6 Android<=4.3 */
     transition: all 0.3s ease-out;
 }
 .fp-section.fp-table, .fp-slide.fp-table {
@@ -83,9 +81,7 @@ html, body {
     overflow: scroll;
 }
 .fp-easing {
-    -webkit-transition: all 0.7s ease-out;
-    -moz-transition: all 0.7s ease-out;
-    -o-transition: all 0.7s ease-out;
+    -webkit-transition: all 0.7s ease-out; /* Safari<=6 Android<=4.3 */
     transition: all 0.7s ease-out;
 }
 #fp-nav {
@@ -151,18 +147,18 @@ html, body {
     height: 8px;
     border: 1px solid #000;
     background: rgba(0, 0, 0, 0);
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
     border-radius: 50%;
     position: absolute;
     z-index: 1;
 }
 .fp-tooltip {
     position: absolute;
+    top: -2px;
     color: #fff;
     font-size: 14px;
     font-family: arial, helvetica, sans-serif;
-    top: -2px;
+    white-space: nowrap;
+    max-width: 220px;
 }
 .fp-tooltip.right {
     right: 20px;
